public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2434/source/compile
source.c: In function ‘main’:
source.c:7:16: error: expected expression before ‘>’ token
        while(H=>1){
                ^
